cmake_minimum_required(VERSION 3.20)
project(CPlusPlus)


add_subdirectory(rpn-calculator)
add_subdirectory(inheritance-and-polymorphism)
add_subdirectory(library-generator)
add_subdirectory(google-search-ranking)
add_subdirectory(course-conflict)
add_subdirectory(auctioneer-observer)
add_subdirectory(abstract-factory)
add_subdirectory(genetic-algo-TSP)